# nudle

./: .gitignore  .pre-commit-config.yaml  .stignore  Makefile  README.md
api/: pyproject.toml
api/src/everylens/: __init__.py  server.py
api/src/nudle/: __init__.py  commands.py  page.py  protocol.py  refs.py  serve.py  server.py  session.py
api/src/nudle/interactions/: __init__.py  append.py  changed.py  write.py
api/src/nudle/refs/: __init__.py  base.py  button.py  input.py  int_.py  line_chart.py  table.py  title.py
docs/: model.md  usage-guide.md  ux-model.md  vision.md
docs/architecture/: data-flow.md  flow.md  live.md
docs/design/: constraints.md  flow.md  live.md  principles.md  style-guide.md  vocabulary.md
docs/engineering/: project-structure.md  stack.md
examples/: counter.py  wish_jar.py
web/: biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  protocol.ts  renderers.tsx  slices.ts  store.ts
web/src/refs/: button.tsx  index.ts  input.tsx  int.tsx  line-chart.tsx  table.tsx  title.tsx  types.ts
