[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nudle"
version = "0.1.0"
description = "UI backend for Nu"
license = "MIT"
authors = [{ name = "Gor Arakelyan", email = "gorarkln@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "nu",
]

[tool.uv.sources]
nu = { path = "../../nu/src", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nudle"]

# ============================================================================
# Pytest
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--strict-config", "--import-mode=importlib"]
asyncio_mode = "auto"

# ============================================================================
# Ruff
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "YTT",    # flake8-2020
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
    "TC",     # flake8-type-checking
    "RUF",    # ruff-specific rules
    "PTH",    # flake8-pathlib
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D102",   # Missing docstring in public method (terse refs / cmds)
    "D103",   # Missing docstring in public function
    "D417",   # Missing arg descriptions in docstring
    "ANN401", # Allow typing.Any where it is the honest type
    "S110",   # try/except/pass when we intentionally swallow shutdown noise
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "T20",    # print allowed in tests
    "D",      # docstrings not required in tests
    "E711",
    "E712",
    "ANN",    # type annotations not required in tests
    "N806",   # disable variable name checks
]

[tool.ruff.lint.isort]
known-first-party = ["nudle"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80
